--- a/public/lang/ENG.json
+++ b/public/lang/ENG.json
@@ -19,8 +19,10 @@
             "Portfolio": "Portfolio", 
             "contact":"Contact Me" 
         },
-        "bio1": "Hi, I'm Nestor, a Frontend and Javascript developer passionate about technology and innovative solutions. With over 4 years of experience, I have worked on various web development projects, from small startups to large companies.",
-        "bio2": "My specialty is creating efficient and user-friendly web applications. I love working with modern technologies and development tools, such as React, Angular, Vue, Node.js, TypeScript, among others. Additionally, I have extensive experience in creating responsive websites that adapt to different mobile devices.",
+        "bio1": "A passionate frontend developer with a keen eye for design and a love for creating immersive digital experiences. I combine technical expertise with creative vision to build stunning web applications.",
+        "bio2": "My journey in web development started when I discovered my passion for creating beautiful and functional user interfaces. Since then, I've been constantly learning and improving my skills to deliver the best possible solutions.",
+        "iDo": "I specialize in crafting responsive web applications using modern technologies like React and TypeScript. My focus is on creating intuitive user interfaces with attention to detail and performance.",
+        "approach": "I believe in clean code, responsive design, and user-centric development. Every project is an opportunity to create something unique and impactful while ensuring the best possible user experience.",
         "skills": "I am a problem solver and am always looking for new ways to improve the user experience. I believe that web development is a form of art, and I strive to create attractive and clean designs for each of my projects.",
         "contactMe": "If you're looking for a reliable and experienced web developer for your next project, don't hesitate to contact me. I'm excited to work with you and create innovative solutions together."
     }
