--- a/lang/ENG.json
+++ b/lang/ENG.json
@@ -24,6 +24,6 @@
         "iDo": "I specialize in crafting responsive web applications using modern technologies like React and TypeScript. My focus is on creating intuitive user interfaces with attention to detail and performance.",
         "approach": "I believe in clean code, responsive design, and user-centric development. Every project is an opportunity to create something unique and impactful while ensuring the best possible user experience.",
         "skills": "I am a problem solver and am always looking for new ways to improve the user experience. I believe that web development is a form of art, and I strive to create attractive and clean designs for each of my projects.",
-        "contactMe": "If you're looking for a reliable and experienced web developer for your next project, don't hesitate to contact me. I'm excited to work with you and create innovative solutions together."
+        "contactMe": "If you're looking for a reliable and experienced web developer to take your project to the next level, I'd be delighted to help. Contact me to create innovative, tailor-made solutions for your needs."
     }
 }
