--- a/lang/SPA.json
+++ b/lang/SPA.json
@@ -23,7 +23,7 @@
         "bio2": "Mi trayectoria en el desarrollo web comenzó cuando descubrí mi pasión por crear interfaces de usuario hermosas y funcionales. Desde entonces, he estado aprendiendo y mejorando constantemente mis habilidades para ofrecer las mejores soluciones posibles.",
         "iDo": "Me especializo en la creación de aplicaciones web responsivas utilizando tecnologías modernas como React, Vue, Angular y TypeScript. Mi objetivo es crear interfaces de usuario intuitivas con atención al detalle y al rendimiento.",
         "approach": "Creo en el código limpio, el diseño responsivo y el desarrollo centrado en el usuario. Cada proyecto es una oportunidad para crear algo único e impactante, garantizando al mismo tiempo la mejor experiencia de usuario posible.",
-        "skills": "Soy un apasionado de la resolución de problemas y siempre estoy buscando nuevas formas de mejorar la experiencia de usuario. Creo que el desarrollo web es una forma de arte, y me esfuerzo por crear diseños atractivos y limpios para cada uno de mis proyectos.",
-        "contactMe": "Si estás buscando un desarrollador web confiable y experimentado para tu próximo proyecto, no dudes en contactarme. Estoy emocionado de trabajar contigo y crear soluciones innovadoras juntos."
+        "skills": "Me especializo en la resolución de problemas y siempre estoy buscando nuevas formas de mejorar la experiencia de usuario. Creo que el desarrollo web es una forma de arte, y me esfuerzo por crear diseños atractivos y limpios para cada uno de mis proyectos.",
+        "contactMe": "Si buscas un desarrollador web confiable y con experiencia para llevar tu proyecto al siguiente nivel, estaré encantado de ayudarte. Contáctame para desarrollar soluciones innovadoras y a la medida de tus necesidades."
     }
 }
