--- a/lang/ENG.json
+++ b/lang/ENG.json
@@ -9,7 +9,7 @@
         "dataText": { 
             "introd1": "Hi!! I'm", 
             "intro2": "Néstor Guzmán", 
-            "intro3": "software developer", 
+            "intro3": "software engineer", 
             "intro4": "and frontend specialist"
         },
         "titles": { 
